detail详情页开发第一版

--- a/src/assets/css/bottomIcon/iconfont.css
+++ b/src/assets/css/bottomIcon/iconfont.css
@@ -35,4 +35,7 @@
 .icon-suo:before { content: "\e68c"; }
 
 .icon-icon_wode:before { content: "\e602"; font-size: .47rem;}
+.icon-zan:before { content: "\e600"; }
+.icon-yuedu:before { content: "\e6bc"; }
+.icon-pinglun:before { content: "\e638"; }
 
